# nsf_research_open_siem

./: .env.example  .gitignore  Cargo.toml  Cerebras-Qwen-3-235B-Instruct.md  README.md  Research Project Slides.txt  clean_patch.py  extract_finetune_dataset.py  finetune_dataset.jsonl  generate_synthetic_data.py  get_models.py  master_patch.py  patch.py  patch2.py  patch3.py  patch_final.py  pyproject.toml  recover.py  recovered_edits.json  securing-the-honeypot.md  some-research-already-done.md  test_exact_payload.py  test_exact_payload2.py  test_llm.py  test_llm_response.py  what-to-look-for-sample-logs.md
.github/workflows/: ci.yml
config/: ebpf-sensor.toml  endpoint-detection.example.toml
crates/ebpf-sensor/: Cargo.toml
crates/ebpf-sensor-common/: Cargo.toml
crates/ebpf-sensor-common/src/: lib.rs
crates/ebpf-sensor-ebpf/: Cargo.toml
crates/ebpf-sensor-ebpf/src/: main.rs
crates/ebpf-sensor/src/: lib.rs  main.rs
crates/ebpf-sensor/tests/: ebpf_source_contract.rs  sensor_contract.rs
deploy/container-demo/: Containerfile  README.md  compose.yaml  demo.env.example
deploy/ebpf/: README.md  install-systemd.sh
deploy/ebpf/systemd/: honeypot-ebpf@.service
deploy/remote-honeypot/: .env.example  README.md  docker-compose.yml
deploy/tpotce/: README.md
deploy/wazuh/: README.md  ossec-localfile.xml
deploy/wazuh/cdb-lists/: README.md
deploy/wazuh/dashboard/: README.md  honeypot-ai-dashboard-spec.json  honeypot-ai-overview.ndjson
deploy/wazuh/rules/: honeypot-ai-rules.xml
deploy/wazuh/systemd/: honeypot-ai-wazuh-stream.service
docker_demo/: Containerfile  Dockerfile
docs/: ebpf-mvp.md  ml-edr-phase.md  realtime-honeypot-ingest.md  research-notes.md  splunk-wazuh-comparison-demo.md  wazuh-misp-integration.md
generated-dashboard/: index.html
sample_logs/: ebpf-events.ndjson  honeypot.ndjson
scripts/: build-ebpf-sensor.sh  collect-remote-cowrie.sh  collect-remote-tpot.sh  local-wazuh-dashboard-live.sh  local-wazuh-dashboard-smoke.sh  ml-edr-loop.sh  sync-tpot-logs.sh
src/honeypot_ai/: __init__.py  __main__.py  cli.py  correlation.py  detectors.py  endpoint.py  exports.py  features.py  ioc.py  llm.py  misp.py  mitre.py  ml.py  ml_store.py  models.py  packets.py  parsers.py  realtime.py  report.py  splunk.py  wazuh.py  wazuh_preview.py
src_web/: main.rs
tests/: test_analysis.py  test_cli.py  test_endpoint_labels.py  test_exports.py  test_ioc.py  test_llm.py  test_llm_live.py  test_ml.py  test_parsers.py  test_realtime.py  test_wazuh_deploy.py  test_wazuh_preview.py
web/static/: duckdb-shell.js  site.css
