[package]
name = "honeypot-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "honeypot-web"
path = "src_web/main.rs"

[dependencies]
actix-files = "0.6"
actix-web = { version = "4", features = ["cookies"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.2", features = ["bundled"] }
dotenvy = "0.15"
html-escape = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3"
