[project]
name = "honeypot-ai-research"
version = "0.1.0"
description = "Research prototype for honeypot log analysis, IOC extraction, and anomaly scoring."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "NSF Research Prototype" }]

[project.scripts]
honeypot-ai = "honeypot_ai.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
