[project]
name = "honeypot-ai-research"
version = "0.1.0"
description = "Research prototype for honeypot log analysis, IOC extraction, and anomaly scoring."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "NSF Research Prototype" }]

[project.scripts]
honeypot-ai = "honeypot_ai.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
honeypot-ai-research = { path = ".", editable = true }

[tool.pixi.tasks]
test = "python -m unittest discover -s tests"
analyze-sample = "python -m honeypot_ai analyze sample_logs/honeypot.ndjson"
notebook = "jupyter lab"

[tool.pixi.dependencies]
python = "3.12.*"
numpy = ">=2.4.6,<3"
pandas = ">=3.0.3,<4"
scikit-learn = ">=1.9.0,<2"
river = ">=0.25.0,<0.26"
duckdb = ">=1.5.3,<2"
pyarrow = ">=24.0.0,<25"
joblib = ">=1.5.3,<2"
pytest = ">=9.0.3,<10"
jupyterlab = ">=4.5.8,<5"
ipykernel = ">=7.3.0,<8"
